--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 django = "4.2.7"
 pytest-django = "4.7.0"
+django-tailwind = {version = "3.6.0", extras = ["reload"]}
 
 
 [build-system]
